--- a/Flight_Search_Results.html
+++ b/Flight_Search_Results.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <style>
-        body {
+                body {
             background-color: #f8f9fa;
             font-family: Arial, sans-serif;
         }
@@ -55,12 +55,9 @@
         }
         .flight-info {
             display: flex;
+            justify-content: space-between;
             align-items: center;
             margin-bottom: 0.5rem;
-        }
-        .flight-info i {
-            margin-right: 0.5rem;
-            color: #6c757d;
         }
         .flight-info p {
             margin-bottom: 0;
@@ -86,7 +83,7 @@
 </head>
 <body>
 
-<!-- Flight Search Results -->
+    <!-- Flight Search Results -->
 <section class="container mt-5">
     <div class="row">
         <div class="col-md-6">
@@ -101,20 +98,12 @@
                     </div>
                     <hr>
                     <div class="flight-info">
-                        <i class="fas fa-plane-departure"></i>
-                        <p><strong>Departure:</strong> New York (JFK)</p>
+                        <p>New York (JFK)</p>
+                        <p>Los Angeles (LAX)</p>
                     </div>
                     <div class="flight-info">
-                        <i class="far fa-clock"></i>
-                        <p><strong>Departure Time:</strong> 08:00 AM</p>
-                    </div>
-                    <div class="flight-info">
-                        <i class="fas fa-plane-arrival"></i>
-                        <p><strong>Arrival:</strong> Los Angeles (LAX)</p>
-                    </div>
-                    <div class="flight-info">
-                        <i class="far fa-clock"></i>
-                        <p><strong>Arrival Time:</strong> 10:00 AM</p>
+                        <p>08:00 AM</p>
+                        <p>10:00 AM</p>
                     </div>
                     <div class="flight-time">
                         <p>Total Flight Time: 2 hours</p>
@@ -135,20 +124,12 @@
                     </div>
                     <hr>
                     <div class="flight-info">
-                        <i class="fas fa-plane-departure"></i>
-                        <p><strong>Departure:</strong> Chicago (ORD)</p>
+                        <p>Chicago (ORD)</p>
+                        <p>San Francisco (SFO)</p>
                     </div>
                     <div class="flight-info">
-                        <i class="far fa-clock"></i>
-                        <p><strong>Departure Time:</strong> 10:00 AM</p>
-                    </div>
-                    <div class="flight-info">
-                        <i class="fas fa-plane-arrival"></i>
-                        <p><strong>Arrival:</strong> San Francisco (SFO)</p>
-                    </div>
-                    <div class="flight-info">
-                        <i class="far fa-clock"></i>
-                        <p><strong>Arrival Time:</strong> 12:00 PM</p>
+                        <p>10:00 AM</p>
+                        <p>12:00 PM</p>
                     </div>
                     <div class="flight-time">
                         <p>Total Flight Time: 2 hours</p>
@@ -159,6 +140,14 @@
         </div>
     </div>
 </section>
+
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Font Awesome -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+</body>
+</html>
+
 
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
