--- a/Flight_Search_Results.html
+++ b/Flight_Search_Results.html
@@ -5,76 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flight Search Results</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <style>
-                body {
-            background-color: #f8f9fa;
+        body {
             font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
         }
-        .result-card {
-            background-color: #ffffff;
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .card {
             border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            transition: transform 0.3s ease;
         }
-        .flight-logo {
-            max-height: 50px;
+        .card:hover {
+            transform: translateY(-5px);
         }
         .flight-details {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            padding: 20px;
+        }
+        .flight-details h5 {
+            margin: 0;
+            font-size: 1.5rem;
+            color: #333;
+        }
+        .flight-details p {
+            margin: 5px 0;
+            font-size: 1rem;
+            color: #666;
         }
         .flight-price {
-            font-size: 1.5em;
+            font-size: 1.5rem;
             color: #FF4600;
+            font-weight: bold;
         }
         .destination-image {
-            border-radius: 15px;
-            overflow: hidden;
-            height: 100%;
             width: 100%;
-            object-fit: cover;
-        }
-        .card-body {
-            padding: 1.25rem;
-        }
-        .card-title {
-            font-size: 1.25rem;
-            font-weight: bold;
-            margin-bottom: 0.75rem;
-        }
-        .card-subtitle {
-            font-size: 1rem;
-            color: #6c757d;
-            margin-bottom: 0.5rem;
-        }
-        .flight-info {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 0.5rem;
-        }
-        .flight-info p {
-            margin-bottom: 0;
-        }
-        .flight-time {
-            font-size: 0.9rem;
-            margin-bottom: 0.5rem;
-            color: #6c757d;
+            height: auto;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
         }
         .book-button {
             background-color: #007bff;
             border: none;
             border-radius: 5px;
             color: #fff;
-            padding: 0.5rem 1rem;
+            padding: 10px 20px;
             font-size: 1rem;
             transition: background-color 0.3s;
+            cursor: pointer;
         }
         .book-button:hover {
             background-color: #0056b3;
@@ -84,74 +73,40 @@
 <body>
 
     <!-- Flight Search Results -->
-<section class="container mt-5">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card result-card">
-                <div class="card-body">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <img src="img/Madrid.png" alt="Flight Image" class="destination-image">
                     <div class="flight-details">
-                        <img src="img/logo.png" alt="Airline Logo" class="flight-logo">
-                        <div>
-                            <h5 class="card-title">Flight A123</h5>
-                            <span class="flight-price">$200</span>
-                        </div>
+                        <h5>Flight A123</h5>
+                        <p>New York (JFK) to Los Angeles (LAX)</p>
+                        <p>Departure: 08:00 AM</p>
+                        <p>Arrival: 10:00 AM</p>
+                        <p class="flight-price">$200</p>
+                        <button class="book-button">Book Now</button>
                     </div>
-                    <hr>
-                    <div class="flight-info">
-                        <p>New York (JFK)</p>
-                        <p>Los Angeles (LAX)</p>
-                    </div>
-                    <div class="flight-info">
-                        <p>08:00 AM</p>
-                        <p>10:00 AM</p>
-                    </div>
-                    <div class="flight-time">
-                        <p>Total Flight Time: 2 hours</p>
-                    </div>
-                    <button class="book-button">Book Now</button>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6">
-            <div class="card result-card">
-                <div class="card-body">
+            <div class="col-md-6">
+                <div class="card">
+                    <img src="img/AbuDhabi.png" alt="Flight Image" class="destination-image">
                     <div class="flight-details">
-                        <img src="img/logo.png" alt="Airline Logo" class="flight-logo">
-                        <div>
-                            <h5 class="card-title">Flight B456</h5>
-                            <span class="flight-price">$250</span>
-                        </div>
+                        <h5>Flight B456</h5>
+                        <p>Chicago (ORD) to San Francisco (SFO)</p>
+                        <p>Departure: 10:00 AM</p>
+                        <p>Arrival: 12:00 PM</p>
+                        <p class="flight-price">$250</p>
+                        <button class="book-button">Book Now</button>
                     </div>
-                    <hr>
-                    <div class="flight-info">
-                        <p>Chicago (ORD)</p>
-                        <p>San Francisco (SFO)</p>
-                    </div>
-                    <div class="flight-info">
-                        <p>10:00 AM</p>
-                        <p>12:00 PM</p>
-                    </div>
-                    <div class="flight-time">
-                        <p>Total Flight Time: 2 hours</p>
-                    </div>
-                    <button class="book-button">Book Now</button>
                 </div>
             </div>
         </div>
     </div>
-</section>
 
-<!-- Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Font Awesome -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-</body>
-</html>
-
-
-<!-- Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Font Awesome -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
 </html>
