--- a/Flight_Search_Results.html
+++ b/Flight_Search_Results.html
@@ -104,7 +104,7 @@
                         <hr>
                         <div class="flight-info">
                             <p>New York (JFK)</p>
-                            <i class="fas fa-long-arrow-alt-right arrow"></i>
+                            <i class="fa-solid fa-plane"></i>
                             <p>Los Angeles (LAX)</p>
                         </div>
                         <div class="flight-info">
@@ -131,7 +131,7 @@
                         <hr>
                         <div class="flight-info">
                             <p>Chicago (ORD)</p>
-                            <i class="fas fa-long-arrow-alt-right arrow"></i>
+                            <i class="fa-solid fa-plane"></i>
                             <p>San Francisco (SFO)</p>
                         </div>
                         <div class="flight-info">
