Register kai alla

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
               </div>
               <div class="col-md-8">
                   <div class="booking-form">
-                                  <form action="process_booking.php" method="post">
+                                  <form action="process_booking.php" method="post"> 
+                                    <!-- LATHOS -->
                                       <div class="form-group">
                                           <div class="form-checkbox">
                                               <label for="one-way">
