--- a/staff.html
+++ b/staff.html
@@ -17,11 +17,11 @@
         <svg class="bi me-2" width="40" height="32">
           <use xlink:href="#bootstrap"></use>
         </svg>
-        <span class="fs-4">Airline Company</span>
+        <span class="fs-4">SwiftSkies - Airline Company</span>
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="home.html" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="passenger.html" class="nav-link">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
         <li class="nav-item"><a href="#" class="nav-link active">Staff</a></li>
