--- a/registerform.html
+++ b/registerform.html
@@ -4,21 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftSkies - Sign Up</title>
-    <link rel="icon"
-        href="img/logo.png"
-        type="image/x-icon">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
-
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <style>
         .divider:after,
@@ -46,7 +39,7 @@
                     <img src="img/illustrator_3.png" class="img-fluid" alt="Sample image">
                 </div>
                 <div class="col-md-6 offset-md-1">
-                    <form id="loginForm">
+                    <form id="loginForm" action="registerform.php" method="post">
                         <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-start">
                             <p class="lead fw-normal mb-0 me-3">Sign in with</p>
                             <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -64,26 +57,34 @@
                         </div>
                         <!-- Full Name input -->
                         <div class="form-outline mb-4">
-                            <input type="text" id="fullName" class="form-control form-control-lg" placeholder="Full Name">
+                            <input type="text" id="fullName" class="form-control form-control-lg" placeholder="Full Name" name="fullName">
                         </div>
                         <!-- Phone input -->
                         <div class="form-outline mb-4">
-                            <input type="tel" id="phone" class="form-control form-control-lg" placeholder="Phone">
+                            <input type="tel" id="phone" class="form-control form-control-lg" placeholder="Phone" name="phone">
                         </div>
                         <!-- Email input -->
                         <div class="form-outline mb-4">
-                            <input type="email" id="email" class="form-control form-control-lg" placeholder="Email">
+                            <input type="email" id="email" class="form-control form-control-lg" placeholder="Email" name="email">
                         </div>
                         <!-- Password input -->
                         <div class="form-outline mb-4">
-                            <input type="password" id="password" class="form-control form-control-lg" placeholder="Password">
+                            <input type="password" id="password" class="form-control form-control-lg" placeholder="Password" name="password">
                         </div>
                         <!-- Confirm Password input -->
                         <div class="form-outline mb-4">
-                            <input type="password" id="confirmPassword" class="form-control form-control-lg" placeholder="Confirm Password">
+                            <input type="password" id="confirmPassword" class="form-control form-control-lg" placeholder="Confirm Password" name="confirmPassword">
                         </div>
                         <!-- Select Role input -->
                         <div class="form-outline mb-4">
+                            <p>Select Role:</p>                              
+                            <label for="user" class="radio-inline"><input type="radio" name="gender" id="user" checked>User</label>
+                            <label for="passenger" class="radio-inline"><input type="radio" name="gender" id="passenger">Passenger</label>
+                            <label for="staff" class="radio-inline"><input type="radio" name="gender" id="staff">Staff</label>
+                            <label for="pilot" class="radio-inline"><input type="radio" name="gender" id="pilot">Pilot</label>
+                            <label for="purser" class="radio-inline"><input type="radio" name="gender" id="purser">Purser</label>
+                        </div>
+                        <!-- <div class="form-outline mb-4">
                             <select class="form-select form-select-lg" id="role">
                                 <option selected>Select Role</option>
                                 <option value="user">User</option>
@@ -92,17 +93,16 @@
                                 <option value="pilot">Pilot</option>
                                 <option value="purser">Purser</option>
                             </select>
-                        </div>
+                        </div> -->
                         <div class="d-flex justify-content-between align-items-center">
                             <!-- Checkbox -->
                             <div class="form-check mb-0">
                                 <input class="form-check-input me-2" type="checkbox" value="" id="rememberMe" checked>
                                 <label class="form-check-label" for="rememberMe">Remember me</label>
                             </div>
-                            <!-- <a href="#!" class="text-body">Forgot password?</a> -->
                         </div>
                         <div class="text-center text-md-start mt-4 pt-2">
-                            <button type="button" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
+                            <button type="submit" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="loginform.html" class="link-danger">Login</a></p>
                         </div>
                     </form>
