--- a/registerform.html
+++ b/registerform.html
@@ -35,7 +35,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-5">
-                    <img src="img/illustrator_3.png" class="img-fluid" alt="Sample image">
+                    <img src="img/illustrator_4.png" class="img-fluid" alt="Sample image">
                 </div>
                 <div class="col-md-6 offset-md-1">
                     <form id="loginForm" action="registerform.php" method="post">
@@ -45,10 +45,10 @@
                                 <i class="fab fa-facebook-f"></i>
                             </button>
                             <button type="button" class="btn btn-primary btn-floating mx-1">
-                                <i class="fab fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
                             </button>
                             <button type="button" class="btn btn-primary btn-floating mx-1">
-                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fa-brands fa-discord"></i>
                             </button>
                         </div>
                         <div class="divider d-flex align-items-center my-4">
@@ -72,7 +72,7 @@
                         <div class="form-outline mb-4">
                             <p>Select Role:</p>                              
                             <label for="user" class="radio-inline"><input type="radio" name="role" id="user" checked>User</label>
-                            <label for="passenger" class="radio-inline"><input type="radio" name="role" id="passenger">Passenger</label>
+                            <!-- <label for="passenger" class="radio-inline"><input type="radio" name="role" id="passenger">Passenger</label> -->
                             <label for="staff" class="radio-inline"><input type="radio" name="role" id="staff">Staff</label>
                             <label for="pilot" class="radio-inline"><input type="radio" name="role" id="pilot">Pilot</label>
                             <label for="purser" class="radio-inline"><input type="radio" name="role" id="purser">Purser</label>
