--- a/passenger.html
+++ b/passenger.html
@@ -21,7 +21,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="home.html" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link active">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
         <li class="nav-item"><a href="staff.html" class="nav-link">Staff</a></li>
