--- a/registerform.html
+++ b/registerform.html
@@ -83,6 +83,9 @@
                                 <label class="form-check-label" for="rememberMe">Remember me</label>
                             </div>
                         </div>
+                        <input type="checkbox" name="terms" id="terms">
+                        <label for="terms">I accept the terms and conditions</label>
+                        
                         <div class="text-center text-md-start mt-4 pt-2">
                             <button type="submit" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="loginform.html" class="link-danger">Login</a></p>
