--- a/admin/staff.html
+++ b/admin/staff.html
@@ -21,7 +21,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="/frontend/index.html" class="nav-link" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="passenger.html" class="nav-link">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
         <li class="nav-item"><a href="#" class="nav-link active">Staff</a></li>
