--- a/admin/city.html
+++ b/admin/city.html
@@ -21,7 +21,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="/frontend/index.html" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="passengers.html" class="nav-link">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
         <li class="nav-item"><a href="staff.html" class="nav-link">Staff</a></li>
