--- a/loginform.html
+++ b/loginform.html
@@ -40,13 +40,13 @@
                     <form id="loginForm" action="loginform.php" method="POST">
                         <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-start">
                             <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <button type="button" class="btn btn-primary btn-floating mx-1"  style="background-color: #002144;">
                                 <i class="fab fa-facebook-f"></i>
                             </button>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <button type="button" class="btn btn-primary btn-floating mx-1"  style="background-color: #002144;">
                                 <i class="fab fa-twitter"></i>
                             </button>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <button type="button" class="btn btn-primary btn-floating mx-1"  style="background-color: #002144;">
                                 <i class="fab fa-linkedin-in"></i>
                             </button>
                         </div>
@@ -67,10 +67,10 @@
                                 <input class="form-check-input me-2" type="checkbox" value="" id="rememberMe" checked>
                                 <label class="form-check-label" for="rememberMe">Remember me</label>
                             </div>
-                            <a href="#!" class="text-body">Forgot password?</a>
+                            <a href="forgot-password.php" class="text-body">Forgot password?</a>
                         </div>
                         <div class="text-center text-md-start mt-4 pt-2">
-                            <button type="submit" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                            <button type="submit" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #002144;">Login</button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="registerform.html" class="link-danger">Sign Up</a></p>
                         </div>
                     </form>
